--- a/.env
+++ b/.env
@@ -1,11 +1,4 @@
-<<<<<<< HEAD
 DB_HOST='localhost'
 DB_USER='root'
-DB_PASSWORD='Mittens786'
-DB_NAME='crowdfund_db'
-=======
-DB_HOST='localhost'
-DB_USER='root'
-DB_PASSWORD='Mittens786'
-DB_NAME='crowdfund_db'
->>>>>>> e55cc6ec816567f016172279b2b76a13332a9a9b
+DB_PASSWORD='MyPassword123!'
+DB_NAME='blog_db'
