--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DB_HOST='localhost'
-DB_USER='root'
-DB_PASSWORD='MyPassword123!'
-DB_NAME='blog_db'
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=Daley281092!
+DB_NAME=blog_db
+
