--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "seed": "node seeds/seed.js"
+    "start": "nodemon server.js",
+    "seed": "node -r dotenv/config seeds/seed.js"
   },
   "keywords": [],
   "author": "",
@@ -14,11 +14,12 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "connect-session-sequelize": "^7.0.4",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "mysql2": "^2.3.3",
+    "nodemon": "^3.0.1",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
