--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "TempoTells-Blog",
+  "name": "tempotells-blog",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon server.js",
     "seed": "node -r dotenv/config seeds/seed.js"
   },
@@ -26,6 +26,7 @@
   "devDependencies": {
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
+    "jest": "^29.6.2",
     "prettier": "^2.1.2"
   }
 }
